--- a/src/reviews.html
+++ b/src/reviews.html
@@ -14,10 +14,10 @@
                     <li class="breadrrumbs__item"><a href="">Отзывы</a></li>
                 </ul>
                 <h1 class="title-first">Отзывы</h1>
-                <form action="POST" class="reviews__form form">
+                <form action="" method="post" class="reviews__form form">
                     <label class="form__input-label _half-row">
                         <h3 class="form__input-title">Ваше имя и фамилия</h3>
-                        <input class="form__input" type="text" name="name" placeholder="ФИО">
+                        <input class="form__input" type="text" name="name" placeholder="ФИО" required>
                     </label>
                     <label class="form__input-label _half-row">
                         <h3 class="form__input-title">Оценка</h3>
@@ -26,7 +26,8 @@
                                 <div class="rating__items">
                                     <input id="rating__5" type="radio" class="rating__item" value="5" name="rating">
                                     <label for="rating__5" class="rating__label"></label>
-                                    <input id="rating__4" type="radio" class="rating__item" value="4" name="rating">
+                                    <input id="rating__4" type="radio" class="rating__item" value="4" name="rating"
+                                        checked>
                                     <label for="rating__4" class="rating__label"></label>
                                     <input id="rating__3" type="radio" class="rating__item" value="3" name="rating">
                                     <label for="rating__3" class="rating__label"></label>
@@ -36,7 +37,7 @@
                                     <label for="rating__1" class="rating__label"></label>
                                 </div>
                             </div>
-                            <span class="rating__value">3</span>
+                            <span class="rating__value">4</span>
                         </div>
                     </label>
                     <label class="form__input-label _half-row">
