Some links were added. the delete button on cart popup was wrapped in button elem.

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -42,9 +42,11 @@
                                 </div>
                             </div>
                             <div class="product-card">
-                                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a>
+                                <div class="product-card__img"><a href="./product.html"><img src="img/category.jpg"
+                                            alt="laptop"></a>
                                 </div>
-                                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR
+                                <h3 class="product-card__title"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix
+                                        SCAR
                                         (G733PY-XS96)</a></h3>
                                 <div class="product-card__bottom">
                                     <div class="product-card__price">
@@ -55,68 +57,78 @@
                                 </div>
                             </div>
                             <div class="product-card">
-                                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a>
+                                <div class="product-card__img"><a href="./product.html"><img src="img/category.jpg"
+                                            alt="laptop"></a>
                                 </div>
-                                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR
+                                <h3 class="product-card__title"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix
+                                        SCAR
                                         (G733PY-XS96)</a></h3>
                                 <div class="product-card__bottom">
                                     <div class="product-card__price">
                                         <!-- <p class="product-card__old-price">19999 грн</p> -->
                                         <p class="product-card__actual-price">15000 грн</p>
                                     </div>
-                                    <a href="" class="product-card__buy button">Купить</a>
+                                    <a href="./product.html" class="product-card__buy button">Купить</a>
                                 </div>
                             </div>
                             <div class="product-card">
-                                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a>
+                                <div class="product-card__img"><a href="./product.html"><img src="img/category.jpg"
+                                            alt="laptop"></a>
                                 </div>
-                                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR
+                                <h3 class="product-card__title"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix
+                                        SCAR
                                         (G733PY-XS96)</a></h3>
                                 <div class="product-card__bottom">
                                     <div class="product-card__price">
                                         <p class="product-card__old-price">19999 грн</p>
                                         <p class="product-card__actual-price">15000 грн</p>
                                     </div>
-                                    <a href="" class="product-card__buy button">Купить</a>
+                                    <a href="./product.html" class="product-card__buy button">Купить</a>
                                 </div>
                             </div>
                             <div class="product-card">
-                                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a>
+                                <div class="product-card__img"><a href="./product.html"><img src="img/category.jpg"
+                                            alt="laptop"></a>
                                 </div>
-                                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR
+                                <h3 class="product-card__title"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix
+                                        SCAR
                                         (G733PY-XS96)</a></h3>
                                 <div class="product-card__bottom">
                                     <div class="product-card__price">
                                         <p class="product-card__old-price">19999 грн</p>
                                         <p class="product-card__actual-price">15000 грн</p>
                                     </div>
-                                    <a href="" class="product-card__buy button">Купить</a>
+                                    <a href="./product.html" class="product-card__buy button">Купить</a>
                                 </div>
                             </div>
                             <div class="product-card">
-                                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a>
+                                <div class="product-card__img"><a href="./product.html"><img src="img/category.jpg"
+                                            alt="laptop"></a>
                                 </div>
-                                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR
+                                <h3 class="product-card__title"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix
+                                        SCAR
                                         (G733PY-XS96)</a></h3>
                                 <div class="product-card__bottom">
                                     <div class="product-card__price">
                                         <!-- <p class="product-card__old-price">19999 грн</p> -->
                                         <p class="product-card__actual-price">15000 грн</p>
                                     </div>
-                                    <a href="" class="product-card__buy button">Купить</a>
+                                    <a href="./product.html" class="product-card__buy button">Купить</a>
                                 </div>
                             </div>
                             <div class="product-card">
-                                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a>
+                                <div class="product-card__img"><a href="./product.html"><img src="img/category.jpg"
+                                            alt="laptop"></a>
                                 </div>
-                                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR
+                                <h3 class="product-card__title"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix
+                                        SCAR
                                         (G733PY-XS96)</a></h3>
                                 <div class="product-card__bottom">
                                     <div class="product-card__price">
                                         <p class="product-card__old-price">19999 грн</p>
                                         <p class="product-card__actual-price">15000 грн</p>
                                     </div>
-                                    <a href="" class="product-card__buy button">Купить</a>
+                                    <a href="./product.html" class="product-card__buy button">Купить</a>
                                 </div>
                             </div>
                         </section>
@@ -128,19 +140,19 @@
                             </a>
                             <ul class="pagging__list">
                                 <li>
-                                    <a href="" class="pagging__item">1</a>
+                                    <a href="#1" class="pagging__item">1</a>
                                 </li>
                                 <li>
-                                    <a href="" class="pagging__item pagging__item_active">2</a>
+                                    <a href="#2" class="pagging__item pagging__item_active">2</a>
                                 </li>
                                 <li>
-                                    <a href="" class="pagging__item">3</a>
+                                    <a href="#3" class="pagging__item">3</a>
                                 </li>
                                 <li>
                                     <span class="pagging__item">...</span>
                                 </li>
                                 <li>
-                                    <a href="" class="pagging__item">10</a>
+                                    <a href="#10" class="pagging__item">10</a>
                                 </li>
                             </ul>
                             <a href="" class="pagging__arrow pagging__arrow_right">
