--- a/src/html/header.html
+++ b/src/html/header.html
@@ -30,14 +30,14 @@
                             </ul>
                             <ul class="header-socials">
                                 <li class="header-socials__item">
-                                    <a href="">
+                                    <a href="#">
                                         <svg width="25" height="25">
                                             <use xlink:href="img/icons/icons.svg#telegram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="header-socials__item">
-                                    <a href="">
+                                    <a href="#">
                                         <svg width="25" height="25">
                                             <use xlink:href="img/icons/icons.svg#instagram"></use>
                                         </svg>
@@ -72,11 +72,11 @@
                 </div>
             </li>
             <li class="header-menu__item"><a href="./sale.html">Акции</a></li>
-            <li class="header-menu__item"><a href="">Оплата</a></li>
-            <li class="header-menu__item"><a href="">Гарантия</a></li>
+            <li class="header-menu__item"><a href="#">Оплата</a></li>
+            <li class="header-menu__item"><a href="#">Гарантия</a></li>
             <li class="header-menu__item"><a href="./contacts.html">Контакты</a></li>
-            <li class="header-menu__item"><a href="">Доставка</a></li>
-            <li class="header-menu__item"><a href="">О нас</a></li>
+            <li class="header-menu__item"><a href="#">Доставка</a></li>
+            <li class="header-menu__item"><a href="#">О нас</a></li>
             <li class="header-menu__item"><a href="./reviews.html">Отзывы</a></li>
         </ul>
     </nav>
