--- a/src/index.html
+++ b/src/index.html
@@ -14,49 +14,49 @@
         <div class="categories__container">
           <ul class="categories__list">
             <li class="categories-item">
-              <a class="categories-item__link" href="">
+              <a class="categories-item__link" href="./catalog.html">
                 <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
                 <h2 class="categories-item__title">Ноутбуки</h2>
               </a>
             </li>
             <li class="categories-item">
-              <a class="categories-item__link" href="">
+              <a class="categories-item__link" href="./catalog.html">
                 <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
                 <h2 class="categories-item__title">Ноутбуки</h2>
               </a>
             </li>
             <li class="categories-item">
-              <a class="categories-item__link" href="">
+              <a class="categories-item__link" href="./catalog.html">
                 <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
                 <h2 class="categories-item__title">Ноутбуки</h2>
               </a>
             </li>
             <li class="categories-item">
-              <a class="categories-item__link" href="">
+              <a class="categories-item__link" href="./catalog.html">
                 <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
                 <h2 class="categories-item__title">Ноутбуки</h2>
               </a>
             </li>
             <li class="categories-item">
-              <a class="categories-item__link" href="">
+              <a class="categories-item__link" href="./catalog.html">
                 <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
                 <h2 class="categories-item__title">Ноутбуки</h2>
               </a>
             </li>
             <li class="categories-item">
-              <a class="categories-item__link" href="">
+              <a class="categories-item__link" href="./catalog.html">
                 <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
                 <h2 class="categories-item__title">Ноутбуки</h2>
               </a>
             </li>
             <li class="categories-item">
-              <a class="categories-item__link" href="">
+              <a class="categories-item__link" href="./catalog.html">
                 <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
                 <h2 class="categories-item__title">Ноутбуки</h2>
               </a>
             </li>
             <li class="categories-item">
-              <a class="categories-item__link" href="">
+              <a class="categories-item__link" href="./catalog.html">
                 <div class="categories-item__img"><img src="img/category.jpg" alt="Laptop"></div>
                 <h2 class="categories-item__title">Ноутбуки</h2>
               </a>
@@ -70,15 +70,16 @@
           <div class="new__slider swiper">
             <div class="new__wrapper swiper-wrapper">
               <div class="product-card swiper-slide">
-                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a></div>
-                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR
+                <div class="product-card__img"><a href="./product.html"><img src="img/category.jpg" alt="laptop"></a>
+                </div>
+                <h3 class="product-card__title"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix SCAR
                     (G733PY-XS96)</a></h3>
                 <div class="product-card__bottom">
                   <div class="product-card__price">
                     <p class="product-card__old-price">19999 грн</p>
                     <p class="product-card__actual-price">15000 грн</p>
                   </div>
-                  <a href="" class="product-card__buy button">Купить</a>
+                  <a href="./product.html" class="product-card__buy button">Купить</a>
                 </div>
               </div>
               <div class="product-card swiper-slide">
@@ -91,40 +92,46 @@
                     <p class="product-card__old-price">19999 грн</p>
                     <p class="product-card__actual-price">15000 грн</p>
                   </div>
-                  <a href="" class="product-card__buy button">Купить</a>
+                  <a href="./product.html" class="product-card__buy button">Купить</a>
                 </div>
               </div>
               <div class="product-card swiper-slide">
-                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a></div>
-                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)</a></h3>
+                <div class="product-card__img"><a href="./product.html"><img src="img/category.jpg" alt="laptop"></a>
+                </div>
+                <h3 class="product-card__title"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix SCAR
+                    (G733PY-XS96)</a></h3>
                 <div class="product-card__bottom">
                   <div class="product-card__price">
                     <p class="product-card__old-price">19999 грн</p>
                     <p class="product-card__actual-price">15000 грн</p>
                   </div>
-                  <a href="" class="product-card__buy button">Купить</a>
+                  <a href="./product.html" class="product-card__buy button">Купить</a>
                 </div>
               </div>
               <div class="product-card swiper-slide">
-                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a></div>
-                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)</a></h3>
+                <div class="product-card__img"><a href="./product.html"><img src="img/category.jpg" alt="laptop"></a>
+                </div>
+                <h3 class="product-card__title"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix SCAR
+                    (G733PY-XS96)</a></h3>
                 <div class="product-card__bottom">
                   <div class="product-card__price">
                     <p class="product-card__old-price">19999 грн</p>
                     <p class="product-card__actual-price">15000 грн</p>
                   </div>
-                  <a href="" class="product-card__buy button">Купить</a>
+                  <a href="./product.html" class="product-card__buy button">Купить</a>
                 </div>
               </div>
               <div class="product-card swiper-slide">
-                <div class="product-card__img"><a href=""><img src="img/category.jpg" alt="laptop"></a></div>
-                <h3 class="product-card__title"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)</a></h3>
+                <div class="product-card__img"><a href="./product.html"><img src="img/category.jpg" alt="laptop"></a>
+                </div>
+                <h3 class="product-card__title"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix SCAR
+                    (G733PY-XS96)</a></h3>
                 <div class="product-card__bottom">
                   <div class="product-card__price">
                     <p class="product-card__old-price">19999 грн</p>
                     <p class="product-card__actual-price">15000 грн</p>
                   </div>
-                  <a href="" class="product-card__buy button">Купить</a>
+                  <a href="./product.html" class="product-card__buy button">Купить</a>
                 </div>
               </div>
             </div>
