--- a/src/html/cart-popup.html
+++ b/src/html/cart-popup.html
@@ -11,11 +11,15 @@
             </div>
             <ul class="cart__products-list">
                 <li class="cart-product">
-                    <div class="cart-product__img"><a href=""><img src="img/cart__img.jpg" alt="Laptop"></a></div>
-                    <svg class="cart-product__delete" width="35" height="35">
-                        <use xlink:href="img/icons/icons.svg#delete"></use>
-                    </svg>
-                    <h3 class="cart-product__name title-second"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR
+                    <div class="cart-product__img"><a href="./product.html"><img src="img/cart__img.jpg"
+                                alt="Laptop"></a></div>
+                    <button class="cart-product__delete">
+                        <svg width="35" height="35">
+                            <use xlink:href="img/icons/icons.svg#delete"></use>
+                        </svg>
+                    </button>
+                    <h3 class="cart-product__name title-second"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix
+                            SCAR
                             (G733PY-XS96)</a></h3>
                     <div class="cart-product__row">
                         <div class="cart-product__amount">
@@ -30,11 +34,15 @@
                     </div>
                 </li>
                 <li class="cart-product">
-                    <div class="cart-product__img"><a href=""><img src="img/cart__img.jpg" alt="Laptop"></a></div>
-                    <svg class="cart-product__delete" width="35" height="35">
-                        <use xlink:href="img/icons/icons.svg#delete"></use>
-                    </svg>
-                    <h3 class="cart-product__name title-second"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR
+                    <div class="cart-product__img"><a href="./product.html"><img src="img/cart__img.jpg"
+                                alt="Laptop"></a></div>
+                    <button class="cart-product__delete">
+                        <svg width="35" height="35">
+                            <use xlink:href="img/icons/icons.svg#delete"></use>
+                        </svg>
+                    </button>
+                    <h3 class="cart-product__name title-second"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix
+                            SCAR
                             (G733PY-XS96)</a></h3>
                     <div class="cart-product__row">
                         <div class="cart-product__amount">
@@ -49,11 +57,15 @@
                     </div>
                 </li>
                 <li class="cart-product">
-                    <div class="cart-product__img"><a href=""><img src="img/cart__img.jpg" alt="Laptop"></a></div>
-                    <svg class="cart-product__delete" width="35" height="35">
-                        <use xlink:href="img/icons/icons.svg#delete"></use>
-                    </svg>
-                    <h3 class="cart-product__name title-second"><a href="">Ноутбук 17.3" ASUS ROG Strix SCAR
+                    <div class="cart-product__img"><a href="./product.html"><img src="img/cart__img.jpg"
+                                alt="Laptop"></a></div>
+                    <button class="cart-product__delete">
+                        <svg width="35" height="35">
+                            <use xlink:href="img/icons/icons.svg#delete"></use>
+                        </svg>
+                    </button>
+                    <h3 class="cart-product__name title-second"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix
+                            SCAR
                             (G733PY-XS96)</a></h3>
                     <div class="cart-product__row">
                         <div class="cart-product__amount">
