--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -7,15 +7,15 @@
       <div class="footer-column footer-column_last">
         <h3 class="footer-column__title">Связатся с нами</h3>
         <ul class="footer-column__list">
-          <li class="footer-column__item"><a href="">088-544-4800</a></li>
-          <li class="footer-column__item"><a href="">544-448-7859</a></li>
+          <li class="footer-column__item"><a href="tel:+0885444800">088-544-4800</a></li>
+          <li class="footer-column__item"><a href="tel:+0885444800">544-448-7859</a></li>
           <li class="footer-column__item">
-            <a href="">
+            <a href="#">
               <svg width="25" height="25" fill="white">
                 <use xlink:href="img/icons/icons.svg#telegram"></use>
               </svg>
             </a>
-            <a href="">
+            <a href="#">
               <svg width="25" height="25" fill="white">
                 <use xlink:href="img/icons/icons.svg#instagram"></use>
               </svg>
@@ -26,11 +26,11 @@
       <div class="footer-column">
         <h3 data-spoller class="footer-column__title">Каталог</h3>
         <ul class="footer-column__list">
-          <li class="footer-column__item"><a href="">Ноутбуки</a></li>
-          <li class="footer-column__item"><a href="">Ноутбуки</a></li>
-          <li class="footer-column__item"><a href="">Ноутбуки</a></li>
-          <li class="footer-column__item"><a href="">Ноутбуки</a></li>
-          <li class="footer-column__item"><a href="">Ноутбуки</a></li>
+          <li class="footer-column__item"><a href="./catalog.html">Ноутбуки</a></li>
+          <li class="footer-column__item"><a href="./catalog.html">Ноутбуки</a></li>
+          <li class="footer-column__item"><a href="./catalog.html">Ноутбуки</a></li>
+          <li class="footer-column__item"><a href="./catalog.html">Ноутбуки</a></li>
+          <li class="footer-column__item"><a href="./catalog.html">Ноутбуки</a></li>
         </ul>
       </div>
       <div class="footer-column">
