--- a/src/product.html
+++ b/src/product.html
@@ -52,13 +52,13 @@
                     <div class="product__text">
                         <h1 class="product__title title-second">Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)</h1>
                         <span class="product__status">В наличии</span>
-                        <a href="" class="product__link">Оставить отзыв</a>
+                        <a href="./reviews.html" class="product__link">Оставить отзыв</a>
                         <div class="product__row">
                             <div class="product__price">
                                 <p class="product__old-price">19999 грн</p>
                                 <p class="product__actual-price">15000 грн</p>
                             </div>
-                            <button class="product__btn button">Купить</button>
+                            <button data-type="cart" class="product__btn button">Купить</button>
                         </div>
                     </div>
                     <div data-tabs class="product-add-info">
@@ -70,16 +70,9 @@
                         <div data-tabs-body class="product-add-info__content">
                             <div class="product-add-info__body">
                                 <p>
-                                    Доставка Новая Почта:​​​​​​ Не все отделения Новой Почты возобновили работу.
-                                    ​Отправка товара может занимать 1-3 рабочих дня.По каждому заказу мы уточняем
-                                    возможность отправки.
-                                    Курьерская доставка CompX в г.Киев:Левый берег - 190 грнПравый берег - 350 грнЗа
-                                    город - от 500 грн (обсуждается индивидуально)Быстрая доставка iPOST:Левый берег
-                                    -
-                                    190 грнПравый берег - 350 грн
-                                    Предоплата за отправку некоторых товаров: Мониторы/корпусы/крупногабаритные
-                                    товары -
-                                    500 грн Видеокарты от 20 тис.грн - 300 грн
+                                    Готівковий розрахунок, оплата картою онлайн та по терміналу, оплата частинами
+                                    monobank и ПриватБанк, розстрочка Плати Пізніше, безготівкова оплата з ПДВ та без
+                                    ПДВ
                                 </p>
                             </div>
                             <div class="product-add-info__body">
