Fixed bug with slider. Link to main page was added.

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,6 +1,6 @@
 <header class="header">
     <div class="header__top">
-        <div class="header__logo"><a href="./"><img src="img" alt="Logo"></a></div>
+        <div class="header__logo"><a href="./index.html"><img src="img" alt="Logo"></a></div>
         <div class="header-interactive">
             <div class="header-interactive__container">
                 <button class="header-menu-icon js-icon-menu">
