--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
   <div class="footer__container">
     <div data-spollers="767" class="footer__body">
-      <div class="footer-column">
-        <div class="footer__logo"><img src="img" alt="Logo"></div>
+      <div class="footer-column footer-column_align-center">
+        <div class="footer__logo"><img src="img/logo.jpg" alt="Logo"></div>
       </div>
       <div class="footer-column footer-column_last">
         <h3 class="footer-column__title">Связатся с нами</h3>
