--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,83 +1,81 @@
 <header class="header">
-    <div class="header__top">
-        <div class="header__logo"><a href="./index.html"><img src="img/logo.jpg" alt="Logo"></a></div>
-        <div class="header-interactive">
-            <div class="header-interactive__container">
-                <button class="header-menu-icon js-icon-menu">
-                    <span></span>
-                </button>
-                <div class="header-search">
-                    <input type="text" class="header-search__input" placeholder="Поиск товаров">
-                    <button class="header-search__btn button">
-                        <svg width="18" height="18">
-                            <use xlink:href="img/icons/icons.svg#search" fill="#fff"></use>
-                        </svg>
-                        <span>Искать</span>
-                    </button>
-                </div>
-                <div class="header-interactive__group">
-                    <div data-spollers data-hover class="header-contacts">
-
-                        <button type="button" data-spoller class="header-contacts__btn">
-                            <svg width="30" height="30">
-                                <use xlink:href="img/icons/icons.svg#phone"></use>
-                            </svg>
-                        </button>
-                        <div class="header-contacts__body">
-                            <ul class="header-phones">
-                                <li class="header-phones__item"><a href="tel:+0885444800">088-544-4800</a></li>
-                                <li class="header-phones__item"><a href="tel:+5444487859">544-448-7859</a></li>
-                            </ul>
-                            <ul class="header-socials">
-                                <li class="header-socials__item">
-                                    <a href="#">
-                                        <svg width="25" height="25">
-                                            <use xlink:href="img/icons/icons.svg#telegram"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                                <li class="header-socials__item">
-                                    <a href="#">
-                                        <svg width="25" height="25">
-                                            <use xlink:href="img/icons/icons.svg#instagram"></use>
-                                        </svg>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-
-                    </div>
-                    <button data-type="cart" class="header-cart button">
-                        <svg width="30" height="30">
-                            <use xlink:href="img/icons/icons.svg#cart"></use>
-                        </svg>
-                        <span class="header-cart__text">Корзина</span>
-                        <span class="header-cart__number">3</span>
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <nav class="header__bottom">
-        <ul class="header-menu">
-            <li class="header-menu__item">
-                <div class="header-catalog" data-spollers data-hover>
-                    <button class="header-catalog__btn" type="button" data-spoller>Каталог</button>
-                    <ul class="header-catalog__list">
-                        <li class="hedaer-catalog__item"><a href="./catalog.html">Ноутбуки</a></li>
-                        <li class="hedaer-catalog__item"><a href="./catalog.html">Роутеры</a></li>
-                        <li class="hedaer-catalog__item"><a href="./catalog.html">Роутеры</a></li>
-                        <li class="hedaer-catalog__item"><a href="./catalog.html">Ноутбуки</a></li>
-                    </ul>
-                </div>
-            </li>
-            <li class="header-menu__item"><a href="./sale.html">Акции</a></li>
-            <li class="header-menu__item"><a href="#">Оплата</a></li>
-            <li class="header-menu__item"><a href="#">Гарантия</a></li>
-            <li class="header-menu__item"><a href="./contacts.html">Контакты</a></li>
-            <li class="header-menu__item"><a href="#">Доставка</a></li>
-            <li class="header-menu__item"><a href="#">О нас</a></li>
-            <li class="header-menu__item"><a href="./reviews.html">Отзывы</a></li>
-        </ul>
-    </nav>
+	<div class="header__top">
+		<div class="header-logo"><a href="./index.html"><img src="img/logo.jpg" alt="Laptopia logo"></a></div>
+		<div class="header-interactive">
+			<div class="header-interactive__container">
+				<button class="header-menu-icon js-icon-menu">
+					<span></span>
+				</button>
+				<div class="header-search">
+					<input type="text" class="header-search__input" placeholder="Пошук товарів">
+					<button class="header-search__btn button">
+						<svg width="18" height="18">
+							<use xlink:href="img/icons/icons.svg#search" fill="#fff"></use>
+						</svg>
+						<span>Шукати</span>
+					</button>
+				</div>
+				<div class="header-interactive__group">
+					<div data-spollers class="header-contacts">
+						<button type="button" data-spoller class="header-contacts__btn">
+							<svg width="30" height="30">
+								<use xlink:href="img/icons/icons.svg#phone"></use>
+							</svg>
+						</button>
+						<div class="header-contacts__body">
+							<ul class="header-phones">
+								<li class="header-phones__item"><a href="tel:+0885444800">088-544-4800</a></li>
+								<li class="header-phones__item"><a href="tel:+5444487859">544-448-7859</a></li>
+							</ul>
+							<ul class="header-socials">
+								<li class="header-socials__item">
+									<a href="#">
+										<svg width="25" height="25">
+											<use xlink:href="img/icons/icons.svg#telegram"></use>
+										</svg>
+									</a>
+								</li>
+								<li class="header-socials__item">
+									<a href="#">
+										<svg width="25" height="25">
+											<use xlink:href="img/icons/icons.svg#instagram"></use>
+										</svg>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<button data-type="cart" class="header-cart button">
+						<svg width="30" height="30">
+							<use xlink:href="img/icons/icons.svg#cart"></use>
+						</svg>
+						<span class="header-cart__text">Корзина</span>
+						<span class="header-cart__number">3</span>
+					</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<nav class="header__bottom">
+		<ul class="header-menu">
+			<li class="header-menu__item">
+				<div class="header-catalog" data-spollers>
+					<button class="header-catalog__btn" type="button" data-spoller>Каталог</button>
+					<ul class="header-catalog__list">
+						<li class="hedaer-catalog__item"><a href="./catalog.html">Ноутбуки</a></li>
+						<li class="hedaer-catalog__item"><a href="./catalog.html">Роутеры</a></li>
+						<li class="hedaer-catalog__item"><a href="./catalog.html">Роутеры</a></li>
+						<li class="hedaer-catalog__item"><a href="./catalog.html">Ноутбуки</a></li>
+					</ul>
+				</div>
+			</li>
+			<li class="header-menu__item"><a href="./sale.html">Акции</a></li>
+			<li class="header-menu__item"><a href="#">Оплата</a></li>
+			<li class="header-menu__item"><a href="#">Гарантия</a></li>
+			<li class="header-menu__item"><a href="./contacts.html">Контакты</a></li>
+			<li class="header-menu__item"><a href="#">Доставка</a></li>
+			<li class="header-menu__item"><a href="#">О нас</a></li>
+			<li class="header-menu__item"><a href="./reviews.html">Отзывы</a></li>
+		</ul>
+	</nav>
 </header>
