refactored "categories" and "new" blocks on main page

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 @@include('html/head.html', {
-'title': 'Главная'
+'title': 'Головна'
 })
 
 <body>
@@ -67,19 +67,21 @@
       <section class="new">
         <div class="new__container">
           <h2 class="new__title title-second">Новинки</h2>
-          <div class="new__slider swiper">
-            <div class="new__wrapper swiper-wrapper">
+          <div class="new-slider swiper">
+            <div class="new-slider__wrapper swiper-wrapper">
               <div class="product-card swiper-slide">
-                <div class="product-card__img"><a href="./product.html"><img src="img/category.jpg" alt="laptop"></a>
+                <div class="product-card__img">
+                  <a href="./product.html"><img src="img/category.jpg" alt="laptop"></a>
                 </div>
-                <h3 class="product-card__title"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix SCAR
-                    (G733PY-XS96)</a></h3>
+                <h3 class="product-card__title">
+                  <a href="./product.html">Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)</a>
+                </h3>
                 <div class="product-card__bottom">
                   <div class="product-card__price">
                     <p class="product-card__old-price">19999 грн</p>
                     <p class="product-card__actual-price">15000 грн</p>
                   </div>
-                  <a href="./product.html" class="product-card__buy button">Купить</a>
+                  <a href="./product.html" class="product-card__buy button">Придбати</a>
                 </div>
               </div>
               <div class="product-card swiper-slide">
@@ -92,7 +94,7 @@
                     <p class="product-card__old-price">19999 грн</p>
                     <p class="product-card__actual-price">15000 грн</p>
                   </div>
-                  <a href="./product.html" class="product-card__buy button">Купить</a>
+                  <a href="./product.html" class="product-card__buy button">Придбати</a>
                 </div>
               </div>
               <div class="product-card swiper-slide">
@@ -105,7 +107,7 @@
                     <p class="product-card__old-price">19999 грн</p>
                     <p class="product-card__actual-price">15000 грн</p>
                   </div>
-                  <a href="./product.html" class="product-card__buy button">Купить</a>
+                  <a href="./product.html" class="product-card__buy button">Придбати</a>
                 </div>
               </div>
               <div class="product-card swiper-slide">
@@ -118,7 +120,7 @@
                     <p class="product-card__old-price">19999 грн</p>
                     <p class="product-card__actual-price">15000 грн</p>
                   </div>
-                  <a href="./product.html" class="product-card__buy button">Купить</a>
+                  <a href="./product.html" class="product-card__buy button">Придбати</a>
                 </div>
               </div>
               <div class="product-card swiper-slide">
@@ -131,7 +133,7 @@
                     <p class="product-card__old-price">19999 грн</p>
                     <p class="product-card__actual-price">15000 грн</p>
                   </div>
-                  <a href="./product.html" class="product-card__buy button">Купить</a>
+                  <a href="./product.html" class="product-card__buy button">Придбати</a>
                 </div>
               </div>
             </div>
