Refactored footer (changed column spacing, added arrows to spoilers)

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -2,10 +2,10 @@
   <div class="footer__container">
     <div data-spollers="767" class="footer__body">
       <div class="footer-column footer-column_align-center">
-        <div class="footer__logo"><img src="img/logo.jpg" alt="Logo"></div>
+        <div class="footer-logo"><img src="img/logo.jpg" alt="Laptopia logo"></div>
       </div>
       <div class="footer-column footer-column_last">
-        <h3 class="footer-column__title">Связатся с нами</h3>
+        <h3 class="footer-column__title">Зв'язатися з нами</h3>
         <ul class="footer-column__list">
           <li class="footer-column__item"><a href="tel:+0885444800">088-544-4800</a></li>
           <li class="footer-column__item"><a href="tel:+0885444800">544-448-7859</a></li>
@@ -24,7 +24,12 @@
         </ul>
       </div>
       <div class="footer-column">
-        <h3 data-spoller class="footer-column__title">Каталог</h3>
+        <h3 data-spoller class="footer-column__title">
+          Каталог
+          <svg width="35" height="35">
+            <use xlink:href="img/icons/icons.svg#more"></use>
+          </svg>
+        </h3>
         <ul class="footer-column__list">
           <li class="footer-column__item"><a href="./catalog.html">Ноутбуки</a></li>
           <li class="footer-column__item"><a href="./catalog.html">Ноутбуки</a></li>
@@ -34,11 +39,16 @@
         </ul>
       </div>
       <div class="footer-column">
-        <h3 data-spoller class="footer-column__title">Клиентам</h3>
+        <h3 data-spoller class="footer-column__title">
+          Клієнтам
+          <svg width="35" height="35">
+            <use xlink:href="img/icons/icons.svg#more"></use>
+          </svg>
+        </h3>
         <ul class="footer-column__list">
-          <li class="footer-column__item"><a href="">О нас</a></li>
+          <li class="footer-column__item"><a href="">Про нас</a></li>
           <li class="footer-column__item"><a href="">Доставка</a></li>
-          <li class="footer-column__item"><a href="">Гарантия</a></li>
+          <li class="footer-column__item"><a href="">Гарантія</a></li>
         </ul>
       </div>
     </div>
