--- a/src/html/cart-popup.html
+++ b/src/html/cart-popup.html
@@ -1,109 +1,108 @@
 <section data-close-overlay data-popup="cart" class="cart popup">
     <div class="popup__content">
-        <div class="popup__container">
-            <div class="popup__header">
-                <h2 class="popup__title title-first">Ваша корзина</h2>
-                <button class="popup__close button-close">
+        <div class="popup__header">
+            <h2 class="popup__title title-first">Ваш кошик</h2>
+            <button class="popup__close button-close">
+                <svg width="35" height="35">
+                    <use xlink:href="img/icons/icons.svg#close"></use>
+                </svg>
+            </button>
+        </div>
+        <ul class="cart-products-list">
+            <li class="cart-product">
+                <div class="cart-product__img">
+                    <a href="./product.html"><img src="img/cart__img.jpg" alt="Ноутбук 17.3 ASUS ROG Strix SCAR(G733PY-XS96)"></a>
+                </div>
+                <button class="cart-product__delete">
                     <svg width="35" height="35">
-                        <use xlink:href="img/icons/icons.svg#close"></use>
+                        <use xlink:href="img/icons/icons.svg#delete"></use>
                     </svg>
                 </button>
-            </div>
-            <ul class="cart__products-list">
-                <li class="cart-product">
-                    <div class="cart-product__img"><a href="./product.html"><img src="img/cart__img.jpg"
-                                alt="Laptop"></a></div>
-                    <button class="cart-product__delete">
-                        <svg width="35" height="35">
-                            <use xlink:href="img/icons/icons.svg#delete"></use>
-                        </svg>
-                    </button>
-                    <h3 class="cart-product__name title-second"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix
-                            SCAR
-                            (G733PY-XS96)</a></h3>
-                    <div class="cart-product__row">
-                        <div class="cart-product__amount">
-                            <button class="cart-product__increase">+</button>
-                            <input type="number" class="cart-product__number" value="1"></input>
-                            <button class="cart-product__decrease">-</button>
-                        </div>
-                        <div class="cart-product__price">
-                            <p class="cart-product__old-price">19999 грн</p>
-                            <p class="cart-product__actual-price title-second">15000 грн</p>
-                        </div>
+                <h3 class="cart-product__name title-second">
+                    <a href="./product.html">Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)</a>
+                </h3>
+                <div class="cart-product__row">
+                    <div class="cart-product-amount">
+                        <button class="cart-product-amount__increase">+</button>
+                        <input type="number" class="cart-product-amount__number" value="1"></input>
+                        <button class="cart-product-amount__decrease">-</button>
                     </div>
-                </li>
-                <li class="cart-product">
-                    <div class="cart-product__img"><a href="./product.html"><img src="img/cart__img.jpg"
-                                alt="Laptop"></a></div>
-                    <button class="cart-product__delete">
-                        <svg width="35" height="35">
-                            <use xlink:href="img/icons/icons.svg#delete"></use>
-                        </svg>
-                    </button>
-                    <h3 class="cart-product__name title-second"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix
-                            SCAR
-                            (G733PY-XS96)</a></h3>
-                    <div class="cart-product__row">
-                        <div class="cart-product__amount">
-                            <button class="cart-product__increase">+</button>
-                            <input type="number" class="cart-product__number" value="1"></input>
-                            <button class="cart-product__decrease">-</button>
-                        </div>
-                        <div class="cart-product__price">
-                            <p class="cart-product__old-price">19999 грн</p>
-                            <p class="cart-product__actual-price title-second">15000 грн</p>
-                        </div>
+                    <div class="cart-product-price">
+                        <p class="cart-product-price__old">19999 грн</p>
+                        <p class="cart-product-price__actual title-second">15000 грн</p>
                     </div>
-                </li>
-                <li class="cart-product">
-                    <div class="cart-product__img"><a href="./product.html"><img src="img/cart__img.jpg"
-                                alt="Laptop"></a></div>
-                    <button class="cart-product__delete">
-                        <svg width="35" height="35">
-                            <use xlink:href="img/icons/icons.svg#delete"></use>
-                        </svg>
-                    </button>
-                    <h3 class="cart-product__name title-second"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix
-                            SCAR
-                            (G733PY-XS96)</a></h3>
-                    <div class="cart-product__row">
-                        <div class="cart-product__amount">
-                            <button class="cart-product__increase">+</button>
-                            <input type="number" class="cart-product__number" value="1"></input>
-                            <button class="cart-product__decrease">-</button>
-                        </div>
-                        <div class="cart-product__price">
-                            <p class="cart-product__old-price">19999 грн</p>
-                            <p class="cart-product__actual-price title-second">15000 грн</p>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-            <form action="" method="post" class="form">
-                <label class="form__input-label">
-                    <h3 class="form__input-title">Ваше имя и фамилия</h3>
-                    <input class="form__input" type="text" name="name" placeholder="ФИО" required>
-                </label>
-                <label class="form__input-label _half-row">
-                    <h3 class="form__input-title">Электронная почта</h3>
-                    <input class="form__input" type="email" name="email" placeholder="mail@mail.com">
-                </label>
-                <label class="form__input-label _half-row">
-                    <h3 class="form__input-title">Контактный телефон</h3>
-                    <input class="form__input" id="phone__cart" type="tel" name="phone" placeholder="+38 (___) ___-____"
-                        required>
-                </label>
-                <label class="form__input-label">
-                    <h3 class="form__input-title">Комментарий</h3>
-                    <textarea class="form__textarea" name="comment" cols="20" rows="10"
-                        placeholder="Адрес доставки и пожелания..." required></textarea>
-                </label>
-                <div class="form__footer">
-                    <button class="form__btn button" type="submit">Оформить заказ</button>
-                    <button data-close type="button" class="cart__continue button-close">Продолжить покупки</button>
                 </div>
-            </form>
-        </div>
+            </li>
+            <li class="cart-product">
+                <div class="cart-product__img">
+                    <a href="./product.html"><img src="img/cart__img.jpg" alt="Ноутбук 17.3 ASUS ROG Strix SCAR(G733PY-XS96)"></a>
+                </div>
+                <button class="cart-product__delete">
+                    <svg width="35" height="35">
+                        <use xlink:href="img/icons/icons.svg#delete"></use>
+                    </svg>
+                </button>
+                <h3 class="cart-product__name title-second">
+                    <a href="./product.html">Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)</a>
+                </h3>
+                <div class="cart-product__row">
+                    <div class="cart-product-amount">
+                        <button class="cart-product-amount__increase">+</button>
+                        <input type="number" class="cart-product-amount__number" value="1"></input>
+                        <button class="cart-product-amount__decrease">-</button>
+                    </div>
+                    <div class="cart-product-price">
+                        <p class="cart-product-price__actual title-second">15000 грн</p>
+                    </div>
+                </div>
+            </li>
+            <li class="cart-product">
+                <div class="cart-product__img">
+                    <a href="./product.html"><img src="img/cart__img.jpg" alt="Ноутбук 17.3 ASUS ROG Strix SCAR(G733PY-XS96)"></a>
+                </div>
+                <button class="cart-product__delete">
+                    <svg width="35" height="35">
+                        <use xlink:href="img/icons/icons.svg#delete"></use>
+                    </svg>
+                </button>
+                <h3 class="cart-product__name title-second">
+                    <a href="./product.html">Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)</a>
+                </h3>
+                <div class="cart-product__row">
+                    <div class="cart-product-amount">
+                        <button class="cart-product-amount__increase">+</button>
+                        <input type="number" class="cart-product-amount__number" value="1"></input>
+                        <button class="cart-product-amount__decrease">-</button>
+                    </div>
+                    <div class="cart-product-price">
+                        <p class="cart-product-price__old">19999 грн</p>
+                        <p class="cart-product-price__actual title-second">15000 грн</p>
+                    </div>
+                </div>
+            </li>
+        </ul>
+        <form action="" method="post" class="form">
+            <label class="form__input-label">
+                <h3 class="form__input-title">Ваше ім'я та прізвище</h3>
+                <input class="form__input" type="text" name="name" placeholder="ПІБ" required>
+            </label>
+            <label class="form__input-label _half-row">
+                <h3 class="form__input-title">Електронна пошта</h3>
+                <input class="form__input" type="email" name="email" placeholder="mail@mail.com">
+            </label>
+            <label class="form__input-label _half-row">
+                <h3 class="form__input-title">Телефон</h3>
+                <input class="form__input" id="phone__cart" type="tel" name="phone" placeholder="+38 (___) ___-____"
+                    required>
+            </label>
+            <label class="form__input-label">
+                <h3 class="form__input-title">Коментар до замовлення</h3>
+                <textarea class="form__textarea" name="comment" cols="20" rows="10" required></textarea>
+            </label>
+            <div class="form__footer">
+                <button class="form__btn button" type="submit">Оформити замовлення</button>
+                <button data-close type="button" class="cart__continue button-close">Продорвжити покупки</button>
+            </div>
+        </form>
     </div>
 </section>
