--- a/src/html/cart-popup.html
+++ b/src/html/cart-popup.html
@@ -82,23 +82,23 @@
             </li>
         </ul>
         <form action="" method="post" class="form">
-            <label class="form__input-label">
-                <h3 class="form__input-title">Ваше ім'я та прізвище</h3>
-                <input class="form__input" type="text" name="name" placeholder="ПІБ" required>
-            </label>
-            <label class="form__input-label _half-row">
-                <h3 class="form__input-title">Електронна пошта</h3>
-                <input class="form__input" type="email" name="email" placeholder="mail@mail.com">
-            </label>
-            <label class="form__input-label _half-row">
-                <h3 class="form__input-title">Телефон</h3>
-                <input class="form__input" id="phone__cart" type="tel" name="phone" placeholder="+38 (___) ___-____"
+            <div class="form__block">
+                <label for="name" class="form__label">Ваше ім'я та прізвище</label>
+                <input id="name" class="form__input" type="text" name="name" placeholder="ПІБ" required>
+            </div>
+            <div class="form__block _half-row">
+                <label for="email" class="form__label">Електронна пошта</label>
+                <input id="email" class="form__input" type="email" name="email" placeholder="mail@mail.com">
+            </div>
+            <div class="form__block _half-row">
+                <label for="phone" class="form__label">Телефон</label>
+                <input id="phone" class="form__input" id="phone__cart" type="tel" name="phone" placeholder="+38 (___) ___-____"
                     required>
-            </label>
-            <label class="form__input-label">
-                <h3 class="form__input-title">Коментар до замовлення</h3>
-                <textarea class="form__textarea" name="comment" cols="20" rows="10" required></textarea>
-            </label>
+            </div>
+            <div class="form__block">
+                <label for="comment" class="form__label">Коментар до замовлення</label>
+                <textarea id="comment" class="form__textarea" name="comment" cols="20" rows="10" required></textarea>
+            </div>
             <div class="form__footer">
                 <button class="form__btn button" type="submit">Оформити замовлення</button>
                 <button data-close type="button" class="cart__continue button-close">Продорвжити покупки</button>
