Changed breadcrumbs styles, translated catalog page except filters, changed price markup in product card, fixed sort z-index

--- a/src/index.html
+++ b/src/index.html
@@ -77,9 +77,9 @@
                   <a href="./product.html">Ноутбук 17.3" ASUS ROG Strix SCAR (G733PY-XS96)</a>
                 </h3>
                 <div class="product-card__bottom">
-                  <div class="product-card__price">
-                    <p class="product-card__old-price">19999 грн</p>
-                    <p class="product-card__actual-price">15000 грн</p>
+                  <div class="product-card-price">
+                    <p class="product-card-price__old">19999 грн</p>
+                    <p class="product-card-price__actual">15000 грн</p>
                   </div>
                   <a href="./product.html" class="product-card__buy button">Придбати</a>
                 </div>
@@ -90,9 +90,9 @@
                 <h3 class="product-card__title"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix SCAR
                     (G733PY-XS96)</a></h3>
                 <div class="product-card__bottom">
-                  <div class="product-card__price">
-                    <p class="product-card__old-price">19999 грн</p>
-                    <p class="product-card__actual-price">15000 грн</p>
+                  <div class="product-card-price">
+                    <p class="product-card-price__old">19999 грн</p>
+                    <p class="product-card-price__actual">15000 грн</p>
                   </div>
                   <a href="./product.html" class="product-card__buy button">Придбати</a>
                 </div>
@@ -103,9 +103,9 @@
                 <h3 class="product-card__title"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix SCAR
                     (G733PY-XS96)</a></h3>
                 <div class="product-card__bottom">
-                  <div class="product-card__price">
-                    <p class="product-card__old-price">19999 грн</p>
-                    <p class="product-card__actual-price">15000 грн</p>
+                  <div class="product-card-price">
+                    <p class="product-card-price__old">19999 грн</p>
+                    <p class="product-card-price__actual">15000 грн</p>
                   </div>
                   <a href="./product.html" class="product-card__buy button">Придбати</a>
                 </div>
@@ -116,9 +116,9 @@
                 <h3 class="product-card__title"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix SCAR
                     (G733PY-XS96)</a></h3>
                 <div class="product-card__bottom">
-                  <div class="product-card__price">
-                    <p class="product-card__old-price">19999 грн</p>
-                    <p class="product-card__actual-price">15000 грн</p>
+                  <div class="product-card-price">
+                    <p class="product-card-price__old">19999 грн</p>
+                    <p class="product-card-price__actual">15000 грн</p>
                   </div>
                   <a href="./product.html" class="product-card__buy button">Придбати</a>
                 </div>
@@ -129,9 +129,9 @@
                 <h3 class="product-card__title"><a href="./product.html">Ноутбук 17.3" ASUS ROG Strix SCAR
                     (G733PY-XS96)</a></h3>
                 <div class="product-card__bottom">
-                  <div class="product-card__price">
-                    <p class="product-card__old-price">19999 грн</p>
-                    <p class="product-card__actual-price">15000 грн</p>
+                  <div class="product-card-price">
+                    <p class="product-card-price__old">19999 грн</p>
+                    <p class="product-card-price__actual">15000 грн</p>
                   </div>
                   <a href="./product.html" class="product-card__buy button">Придбати</a>
                 </div>
