--- a/src/catalog.html
+++ b/src/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ua">
 @@include('html/head.html', {
 'title': 'Каталог'
 })
@@ -10,8 +10,8 @@
         <main class="page catalog">
             <div class="page__container">
                 <ul class="breadcrumbs">
-                    <li class="breadrrumbs__item"><a href="">Главная</a></li>
-                    <li class="breadrrumbs__item"><a href="">Ноутбуки</a></li>
+                    <li class="breadcrumbs__item"><a href="/">Головна</a></li>
+                    <li class="breadcrumbs__item"><span class="breadcrumbs__item-current">Ноутбуки</span></li>
                 </ul>
                 <div class="catalog__body">
                     @@include('html/filter.html')
@@ -19,11 +19,10 @@
                         <h1 class="catalog-title title-first">Ноутбуки</h1>
                         <div class="catalog__row">
                             <select data-speed="300" name="form[]" class="sort">
-                                <option value="1" selected>По возрастанию цены
-                                </option>
-                                <option value="2">По убыванию цены</option>
+                                <option value="1" selected>За зростанням ціни</option>
+                                <option value="2">За спаданням ціни</option>
                             </select>
-                            <button data-type="filter" class="filter__btn">Фильтры</button>
+                            <button data-type="filter" class="filter__btn">Фільтри</button>
                         </div>
                         <section class="calalog__products">
                             <div class="product-card">
@@ -34,11 +33,11 @@
                                         SCAR
                                         (G733PY-XS96)</a></h3>
                                 <div class="product-card__bottom">
-                                    <div class="product-card__price">
-                                        <p class="product-card__old-price">19999 грн</p>
-                                        <p class="product-card__actual-price">15000 грн</p>
+                                    <div class="product-card-price">
+                                        <p class="product-card-price__old">19999 грн</p>
+                                        <p class="product-card-price__actual">15000 грн</p>
                                     </div>
-                                    <a href="./product.html" class="product-card__buy button">Купить</a>
+                                    <a href="./product.html" class="product-card__buy button">Придбати</a>
                                 </div>
                             </div>
                             <div class="product-card">
@@ -49,11 +48,11 @@
                                         SCAR
                                         (G733PY-XS96)</a></h3>
                                 <div class="product-card__bottom">
-                                    <div class="product-card__price">
-                                        <p class="product-card__old-price">19999 грн</p>
-                                        <p class="product-card__actual-price">15000 грн</p>
+                                    <div class="product-card-price">
+                                        <p class="product-card-price__old">19999 грн</p>
+                                        <p class="product-card-price__actual">15000 грн</p>
                                     </div>
-                                    <a href="" class="product-card__buy button">Купить</a>
+                                    <a href="" class="product-card__buy button">Придбати</a>
                                 </div>
                             </div>
                             <div class="product-card">
@@ -64,11 +63,11 @@
                                         SCAR
                                         (G733PY-XS96)</a></h3>
                                 <div class="product-card__bottom">
-                                    <div class="product-card__price">
-                                        <!-- <p class="product-card__old-price">19999 грн</p> -->
-                                        <p class="product-card__actual-price">15000 грн</p>
-                                    </div>
-                                    <a href="./product.html" class="product-card__buy button">Купить</a>
+                                    <div class="product-card-price">
+                                        <!-- <p class="product-card-price__old">19999 грн</p> -->
+                                        <p class="product-card-price__actual">15000 грн</p>
+                                      </div>
+                                    <a href="./product.html" class="product-card__buy button">Придбати</a>
                                 </div>
                             </div>
                             <div class="product-card">
@@ -79,11 +78,11 @@
                                         SCAR
                                         (G733PY-XS96)</a></h3>
                                 <div class="product-card__bottom">
-                                    <div class="product-card__price">
-                                        <p class="product-card__old-price">19999 грн</p>
-                                        <p class="product-card__actual-price">15000 грн</p>
+                                    <div class="product-card-price">
+                                        <!-- <p class="product-card-price__old">19999 грн</p> -->
+                                        <p class="product-card-price__actual">15000 грн</p>
                                     </div>
-                                    <a href="./product.html" class="product-card__buy button">Купить</a>
+                                    <a href="./product.html" class="product-card__buy button">Придбати</a>
                                 </div>
                             </div>
                             <div class="product-card">
@@ -94,11 +93,11 @@
                                         SCAR
                                         (G733PY-XS96)</a></h3>
                                 <div class="product-card__bottom">
-                                    <div class="product-card__price">
-                                        <p class="product-card__old-price">19999 грн</p>
-                                        <p class="product-card__actual-price">15000 грн</p>
+                                    <div class="product-card-price">
+                                        <p class="product-card-price__old">19999 грн</p>
+                                        <p class="product-card-price__actual">15000 грн</p>
                                     </div>
-                                    <a href="./product.html" class="product-card__buy button">Купить</a>
+                                    <a href="./product.html" class="product-card__buy button">Придбати</a>
                                 </div>
                             </div>
                             <div class="product-card">
@@ -109,11 +108,11 @@
                                         SCAR
                                         (G733PY-XS96)</a></h3>
                                 <div class="product-card__bottom">
-                                    <div class="product-card__price">
-                                        <!-- <p class="product-card__old-price">19999 грн</p> -->
-                                        <p class="product-card__actual-price">15000 грн</p>
+                                    <div class="product-card-price">
+                                        <!-- <p class="product-card-price__old">19999 грн</p> -->
+                                        <p class="product-card-price__actual">15000 грн</p>
                                     </div>
-                                    <a href="./product.html" class="product-card__buy button">Купить</a>
+                                    <a href="./product.html" class="product-card__buy button">Придбати</a>
                                 </div>
                             </div>
                             <div class="product-card">
@@ -124,16 +123,16 @@
                                         SCAR
                                         (G733PY-XS96)</a></h3>
                                 <div class="product-card__bottom">
-                                    <div class="product-card__price">
-                                        <p class="product-card__old-price">19999 грн</p>
-                                        <p class="product-card__actual-price">15000 грн</p>
+                                    <div class="product-card-price">
+                                        <p class="product-card-price__old">19999 грн</p>
+                                        <p class="product-card-price__actual">15000 грн</p>
                                     </div>
-                                    <a href="./product.html" class="product-card__buy button">Купить</a>
+                                    <a href="./product.html" class="product-card__buy button">Придбати</a>
                                 </div>
                             </div>
                         </section>
                         <div class="pagging">
-                            <a href="" class="pagging__arrow pagging__arrow_left">
+                            <a href="" class="pagging-arrow pagging-arrow_left">
                                 <svg width="28" height="28">
                                     <use xlink:href="img/icons/icons.svg#arrow-blue"></use>
                                 </svg>
@@ -155,7 +154,7 @@
                                     <a href="#10" class="pagging__item">10</a>
                                 </li>
                             </ul>
-                            <a href="" class="pagging__arrow pagging__arrow_right">
+                            <a href="" class="pagging-arrow pagging-arrow_right">
                                 <svg width="28" height="28">
                                     <use xlink:href="img/icons/icons.svg#arrow-blue"></use>
                                 </svg>
