Refactored filter block on catalog page

--- a/src/html/filter.html
+++ b/src/html/filter.html
@@ -5,15 +5,15 @@
     </svg>
   </button>
   <ul class="filter-applied">
-    <li class="filter-applied__item">
-      <h3 class="filter-applied-item__title">Процессор:</h3>
+    <li class="filter-applied-item">
+      <h3 class="filter-applied-item__title">Процесор:</h3>
       <ul>
         <li class="filter-applied-item__option"><button class="button">Intel Core I5</button></li>
         <li class="filter-applied-item__option"><button class="button">AMD ryzen 7</button></li>
       </ul>
     </li>
-    <li class="filter-applied__item">
-      <h3 class="filter-applied-item__title">Оперативная память:</h3>
+    <li class="filter-applied-item">
+      <h3 class="filter-applied-item__title">Оперативна пам'ять:</h3>
       <ul>
         <li class="filter-applied-item__option"><button class="button">8 ГБ</button></li>
         <li class="filter-applied-item__option"><button class="button">16 ГБ</button></li>
@@ -21,9 +21,9 @@
     </li>
   </ul>
   <form data-spollers class="filter__body">
-    <button class="filter__reset" type="reset">Сбросить все</button>
+    <button class="filter-reset" type="reset">Скинути все</button>
     <fieldset class="filter-group">
-      <legend class="filter-group__title filter-group__title_price">Цена</legend>
+      <legend class="filter-group__title filter-group__title_price">Ціни</legend>
       <div class="filter-group__price">
         <input type="number" class="filter-group__input" id="minPrice" value="100">
         <span class="filter-group__line"></span>
@@ -33,7 +33,7 @@
       <div class="filter-group__range" id="range"></div>
     </fieldset>
     <fieldset class="filter-group">
-      <legend data-spoller class="filter-group__title">Процессор</legend>
+      <legend data-spoller class="filter-group__title">Процесор</legend>
       <ul class="filter-group__list">
         <li class="filter-group__item">
           <input class="filter-group__checkbox visually-hidden" type="checkbox" name="" id="Intel-Core-I5">
@@ -68,7 +68,7 @@
       </ul>
     </fieldset>
     <fieldset data-spollers class="filter-group">
-      <legend data-spoller class="filter-group__title">Тип матрицы:</legend>
+      <legend data-spoller class="filter-group__title">Тип матриці:</legend>
       <ul class="filter-group__list">
         <li class="filter-group__item">
           <input class="filter-group__checkbox visually-hidden" type="checkbox" name="" id="IPS">
